Prevent overflow causing extension of field width

--- a/src/components/Connect/Connect.module.css
+++ b/src/components/Connect/Connect.module.css
@@ -52,6 +52,7 @@
   margin: 0 !important;
   padding-top: 0 !important;
   padding-bottom: 0 !important;
+  overflow: hidden;
 }
 
 .subCountry {
